menu "stiky" + footer fini

--- a/forum/style3.css
+++ b/forum/style3.css
@@ -1,3 +1,6 @@
+body{
+    transition: 1s;
+}
 #lienhaut {
     text-decoration: none;
 }
@@ -22,6 +25,7 @@
     top: 210px;
     margin-left: -200px;
     text-align: center;
+    z-index: 4;
 }
 
 .textetabbasgauche {
@@ -67,6 +71,11 @@
     background-color: black;
     vertical-align: top;
 }
+.tabbas.fixed{
+    position:fixed;
+    top:0;
+    z-index:3;
+  }
 
 .fondtab {
     background-image: url(fondtab.png);
@@ -330,8 +339,8 @@ div {
     font-size:20px;
 }
 footer{
+    border-top: solid black 5px;;
     background-color: black;
-    display: inline-block;
     width: 100%;
     margin: 0rem;
     padding: 0rem;
@@ -339,14 +348,16 @@ footer{
 
 .footer{
     width: 100%;
+    height: 16px;
 }
 .listefoot{
     float: right;
-    
+    margin: 0%;
+    padding: 0%;
 }
-.listeleft{
-    float: left;
-    
+.listefootright{
+    float: right;
+
 }
 .lienbarfoot{
     margin-right: 20px;
@@ -359,5 +370,10 @@ footer{
     color: rgb(255, 255, 255);
 }
 #final{
-    text-align: center;
+    margin-left: 20px;
+}
+.bandogristabbas{
+    width: 100%;
+    height: 32px;
+    background-color: rgb(92, 92, 92);
 }
