--- a/mystyle.css
+++ b/mystyle.css
@@ -16,11 +16,14 @@ em{
     color:white;
 }
 body {
-    background-color: #F29E0A;
+    background: #F29E0A;
+    background-size: 100%;
     font-family: 'Roboto', sans-serif;
 }
 .encadrement {
     background-color: #333333;
+    background-size: 100%;
+    background-position-y: center;
     height: 3px;
     width: 100%;
     border-bottom: solid black 3px;
@@ -28,6 +31,7 @@ body {
 }
 header {
     background-color: #333333;
+    background-size: 100%;
     color:white;
 }
 .titreHeader {
@@ -84,11 +88,16 @@ header {
 }
 .paragraphe {
     border: solid white 5px;
+    height: auto;
+    font-size: 14px;
     margin-left: 30px;
     margin-right: 30px;
     margin-bottom: 30px;
-    background-color: #B15151;
+    background: #B15151;
+    max-height: 588px;
     padding-bottom : 20px;
+    background-size: 100%;
+    overflow: auto;
 }
 .corpArriere {
     margin-top:1000px;
@@ -114,6 +123,7 @@ header {
 }
 footer {
     background-color: #333333;
+    background-size: 100%;
     padding-bottom: 10px;
     padding-top: 10px;
     text-align:center;
@@ -127,4 +137,10 @@ footer {
 iframe{
     width: 90%;
     height:auto;
+}
+
+@media only screen and (max-width: 600px) {
+    .paragraphe {
+        font-size: 10px;
+    }
 }
