--- a/mystyle.css
+++ b/mystyle.css
@@ -1,4 +1,4 @@
-﻿body,p,div,nav
+body,p,div,nav
 {
     margin:0px;
     position:relative;
@@ -10,6 +10,14 @@ a{
 #position{
     width: auto;
     height: 300px;
+}
+td{
+    border : 2px solid black;
+    margin: 3px;
+}
+table{
+    border-collapse: collapse;
+    width: 100%;
 }
 em{
     text-decoration:none;
@@ -24,7 +32,7 @@ body {
     background-color: #333333;
     background-size: 100%;
     background-position-y: center;
-    height: 3px;
+    height: 2px;
     width: 100%;
     border-bottom: solid black 3px;
     border-top: solid black 3px;
