--- a/SI SVT/style2.css
+++ b/SI SVT/style2.css
@@ -31,7 +31,7 @@
   background-image: url("https://images.ecosia.org/9V7ZBqH-dBwrfbSi9VGOdWDIslg=/0x390/smart/https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2Fd%2Fd5%2FSimpleicons_Interface_arrow-pointing-to-right-1.svg%2F600px-Simpleicons_Interface_arrow-pointing-to-right-1.svg.png")
 }
 .imgCentrale{
-	background-image: url("centrale.png");
+	background-image: url("centrale.PNG");
 	background-size: 100%;
 	width: 800px;
 	height: 350px;
