--- a/Escalade/style.css
+++ b/Escalade/style.css
@@ -1,17 +1,61 @@
+.loadingPage{
+	background-color: rgba(31,31,31,1);
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top:0;
+	left:0;
+	z-index: 1000;
+}
 
+header{
+	margin: 150px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	color: antiquewhite;
+	width: 1000px;
+}
+a:hover{
+	text-decoration: none;
+}
+header h1{
+	font-size: 70px;
+}
 #mur{
+	margin-top:20px;
 	margin-left: 35%;
 	margin-right: 35%;
 	width: 30%;
 	border-bottom: 2px solid gray;
 }
 body{
-	background-color: #2D2D2D;
+	background-color: rgba(31,31,31,0.90);
+	height: 100%;
 }
-
+html{
+	background-image: url("imagesEscalades/pieces/sabrina-wendl-h2NlwNkA2h8-unsplash.jpg");
+	background-size: 100%;
+	height: 100%;
+}
+@media screen and (orientation: portrait) {
+	html{
+		background-image: url("imagesEscalades/pieces/bady-qb-VmYZe_yqxL0-unsplash.jpg");
+		background-size: 100%;
+	}
+	header{
+		width: 700px;
+	}
+}
+#boutton{
+	margin: 20px;
+}
+#boutton h2{
+	font-size: 20px;
+}
 .lds-ring {
-	position: fixed;
-top: 50%; left: 50%; /* à 50%/50% du parent référent */
+  position: fixed;
+  top: 50%; left: 50%; /* à 50%/50% du parent référent */
   transform: translate(-50%, -50%); /* décalage de 50% de sa propre taille */
   width: 80px;
   height: 80px;
