--- a/Escalade/style.css
+++ b/Escalade/style.css
@@ -14,7 +14,8 @@ header{
 	margin-right: auto;
 	text-align: center;
 	color: antiquewhite;
-	width: 1000px;
+	max-width: 1000px;
+	width: 80%
 }
 a:hover{
 	text-decoration: none;
@@ -44,7 +45,7 @@ html{
 		background-size: 100%;
 	}
 	header{
-		width: 700px;
+		max-width: 700px;
 	}
 }
 #boutton{
