--- a/Escalade/style.css
+++ b/Escalade/style.css
@@ -9,7 +9,7 @@
 }
 
 header{
-	margin: 150px;
+	margin-top: 150px;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
@@ -46,6 +46,9 @@ html{
 	}
 	header{
 		max-width: 700px;
+	}
+	header h1{
+		font-size:50px;
 	}
 }
 #boutton{
