--- a/foxSkied/style.css
+++ b/foxSkied/style.css
@@ -67,6 +67,7 @@ body:before {
 	transform: translate(-50%, -20%); /* décalage de 50% de sa propre taille */
 }
 .next img{
+	transition: 1s;
 	transform: rotate(90deg);
 }
 .arrow{
@@ -113,6 +114,8 @@ header .left{
 }
 header .center{
 	left:50%;
+		width: 59%;
+	text-align: center;
 	transform: translate(-50%); /* décalage de 50% de sa propre taille */
 }
 header .center a{
@@ -138,4 +141,42 @@ header .right img{
 	height: 80%;
 	float: right;
 	cursor: pointer;
+}
+#home{
+	width: 100%;
+	position: absolute;
+	height: 100%;
+	left:50%;
+	top:0%;
+	transition: 1s;
+	transform: translate(-50%); /* décalage de 50% de sa propre taille */
+}
+#textHome{
+	width: 100%;
+	position: absolute;
+	height: 100%;
+	left:50%;
+	top:100%;
+	transition: 1s;
+	transform: translate(-50%); /* décalage de 50% de sa propre taille */
+}
+.card{
+	width: calc(32% - 40px);
+	height: 70%;
+	margin: 20px;
+	display: inline-block;
+	border: 3px solid white;
+	background-color: rgba(0,0,0,0.75);
+	text-align: center;
+	font-size: 20px;
+}
+.centerDiv{
+	position: absolute;
+	width: 80%;
+	height: 80%;
+	top: 20%;
+	left:10%;
+}
+.top{
+	transform: rotate(-90deg) !important;
 }
