--- a/foxSkied/style.css
+++ b/foxSkied/style.css
@@ -17,9 +17,49 @@ body:before {
     z-index: -1; /* Keep the background behind the content */     
     filter: blur(8px);
 	background-position: center;
-	background-size: auto 100%;
+	background-size: auto 90%;
 	transform: scale(1.1);
  }
+#left{
+	right:50%;
+	border-right: 20px solid white;
+}
+#left,#right{
+	position: fixed;
+	top: -35%;
+	width: 100%;
+	height: 200%;
+	transform: rotate(20deg);
+	transition: 1s;
+	background-size: cover;
+	overflow: hidden;
+}
+#left:hover,#right:hover,.signLeft:hover #left,.signRight:hover #right{
+	z-index: 1;
+	width: 65%;
+}
+#right{
+	left:50%;
+	border-left: 20px solid white;
+}
+#left div{
+	background-color: antiquewhite;
+		background-image: url("backgroundMontageLeft.jpg");
+		background-position: right center;
+}
+#right div{
+	background-color: darkslategray;
+		background-image: url("backgroundMontageRight.jpg");
+		background-position: left center;
+}
+#left div,#right div{
+	transform: rotate(-20deg);
+	width: 150%;
+	height: 150%;
+	background-size:auto 85%;
+}
+
+
 .bar{
 	width: 80%;
 	position: absolute;
@@ -230,4 +270,22 @@ header .right img{
 .bottom{
 	padding: 3px;
 	height: 10%;
+}
+
+.signLeft, .signRight{
+	position: fixed;
+	left:20%;
+	top:55%;
+	width: 50%;
+	cursor: pointer;
+	text-align: center;
+	transform: translate(-30%, -50%); /* décalage de 50% de sa propre taille */
+	z-index: 2;
+}
+ .signRight{
+	 left:80%;
+	transform: translate(-70%, -50%); /* décalage de 50% de sa propre taille */
+}
+.signLeft h1,.signRight h1{
+		font-size: 30px;
 }
