--- a/foxSkied/style.css
+++ b/foxSkied/style.css
@@ -20,43 +20,33 @@ body:before {
 	background-size: auto 90%;
 	transform: scale(1.1);
  }
-#left{
-	right:50%;
-	border-right: 20px solid white;
-}
-#left,#right{
+#boxLeft {
+  background: #eee;
+	  width: 100%;
+  height: 100%;
 	position: fixed;
-	top: -35%;
+	top:0;left:0;
+	background-image: url("backgroundMontageBad.png");
+	background-size: 100%;
+	filter: blur(3px);
+}
+#lineBack{
+	clip-path: polygon(95% 0, 100% 0, 5% 100%, 0 100%);
+	background-color: white;
 	width: 100%;
-	height: 200%;
-	transform: rotate(20deg);
-	transition: 1s;
-	background-size: cover;
-	overflow: hidden;
+	height: 100%;
+	position: fixed;
+	z-index: 5;
 }
-#left:hover,#right:hover,.signLeft:hover #left,.signRight:hover #right{
-	z-index: 1;
-	width: 65%;
-}
-#right{
-	left:50%;
-	border-left: 20px solid white;
-}
-#left div{
-	background-color: antiquewhite;
-		background-image: url("backgroundMontageLeft.jpg");
-		background-position: right center;
-}
-#right div{
-	background-color: darkslategray;
-		background-image: url("backgroundMontageRight.jpg");
-		background-position: left center;
-}
-#left div,#right div{
-	transform: rotate(-20deg);
-	width: 150%;
-	height: 150%;
-	background-size:auto 85%;
+#boxRight {
+  width: 100%;
+  height: 100%;
+  background-color: #dd4f39;
+	background-image: url("backgroundbad.png");
+  clip-path: polygon(100% 0, 100% 100%, 0 100%);
+  background-size: auto 100%;
+	filter: blur(2px);
+	transform: scale(1.1);
 }
 
 
@@ -274,8 +264,8 @@ header .right img{
 
 .signLeft, .signRight{
 	position: fixed;
-	left:20%;
-	top:55%;
+	left:15%;
+	top:40%;
 	width: 50%;
 	cursor: pointer;
 	text-align: center;
@@ -283,9 +273,17 @@ header .right img{
 	z-index: 2;
 }
  .signRight{
-	 left:80%;
+	 	top:60%;
+	 left:85%;
 	transform: translate(-70%, -50%); /* décalage de 50% de sa propre taille */
 }
 .signLeft h1,.signRight h1{
-		font-size: 30px;
+	font-size: 50px;
+	color: rgba(15,15,15,1.00);
+	text-shadow: 0px 0px 10px rgba(255,255,255,0.50);
+	transition: 1s;
+}
+.signLeft h1:hover,.signRight h1:hover{
+	font-size: 55px;
+	text-shadow: 0px 0px 10px cyan;
 }
