--- a/newPortFolio/style.css
+++ b/newPortFolio/style.css
@@ -18,6 +18,17 @@ body{
 		background-image: url("./portrait.jpg");
 	} 
 }
+.line{
+	width: 100%;
+	height: 0px;
+	overflow: hidden;
+	border: 3px solid rgba(255,255,255,0.60);
+	border-radius: 3px;
+	transition: 0.5s;
+	left:100%;
+	top:50%;
+	position: fixed;
+}
 .bar{
 	width: 120%;
 	position: absolute;
@@ -34,7 +45,16 @@ body{
 	transform: translate(-50%, -50%); /* décalage de 50% de sa propre taille */
     font-family: 'Oswald', sans-serif;
 }
-.sign h1{
+.line h1{
+	width: auto;
+	height: auto;
+	position: absolute;
+	left:50%;
+	top:50%;
+	font-size: 40px;
+	transform: translate(-50%, -75%); /* décalage de 50% de sa propre taille */
+}
+.sign h1, .line h1{
 	cursor: pointer;
 	width: 100%;
 	text-transform: uppercase;
@@ -42,6 +62,7 @@ body{
 	text-align: center;
 	color: rgba(255,255,255,1);
 	text-shadow: 1px 1px 3px rgba(255,255,255,0.49);
+    font-family: 'Oswald', sans-serif;
 }
 .next{
 	position: absolute;
