--- a/foxSkied/style.css
+++ b/foxSkied/style.css
@@ -26,9 +26,8 @@ body:before {
   height: 100%;
 	position: fixed;
 	top:0;left:0;
-	background-image: url("backgroundMontageBad.png");
-	background-size: 100%;
-	filter: blur(3px);
+	background-image: url("backgroundMontage.jpg");
+	background-size: cover;
 }
 #lineBack{
 	clip-path: polygon(95% 0, 100% 0, 5% 100%, 0 100%);
@@ -42,11 +41,11 @@ body:before {
   width: 100%;
   height: 100%;
   background-color: #dd4f39;
-	background-image: url("backgroundbad.png");
+	background-image: url("background.jpg");
   clip-path: polygon(100% 0, 100% 100%, 0 100%);
-  background-size: auto 100%;
-	filter: blur(2px);
+  background-size: cover;
 	transform: scale(1.1);
+		background-position: center center;
 }
 
 
@@ -279,8 +278,7 @@ header .right img{
 }
 .signLeft h1,.signRight h1{
 	font-size: 50px;
-	color: rgba(15,15,15,1.00);
-	text-shadow: 0px 0px 10px rgba(255,255,255,0.50);
+	text-shadow: 0px 0px 10px rgba(5,5,5,0.50);
 	transition: 1s;
 }
 .signLeft h1:hover,.signRight h1:hover{
