--- a/foxSkied/style.css
+++ b/foxSkied/style.css
@@ -9,6 +9,9 @@ body{
 	font-family: 'Oswald', sans-serif;
 	overflow: hidden;
 }
+.minecraftText{
+	font-family: 'VT323', monospace !important;
+}
 body:before {
     content: "";
     position: fixed;
