--- a/artprojet2/style.css
+++ b/artprojet2/style.css
@@ -43,6 +43,7 @@ body{
 }
 #conteanire{
   width: calc(100% - 22px);
+  height: calc(100% - 12px);
   border: 3px solid black
 }
 #conteanire table{
