--- a/artprojet2/style.css
+++ b/artprojet2/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&display=swap');
+*{
+  font-family: 'Roboto Slab', serif;
+
+}
 table {
   width: 30%;
   height: 30%;
