--- a/AFFICHES/style.css
+++ b/AFFICHES/style.css
@@ -209,7 +209,7 @@ h2:after {
   width: 100%;
   height: 100%;
   background-color: #40404070;
-  z-index: 10;
+  z-index: 1000000;
 }
 
 #ENGRAND img{
